<resources>
    <string name="app_name">TaskApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_account_yet">Not account yet ?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_one">Create One</string>
    <string name="messageForShortPassword">Password too short, enter minimum 6 characters!</string>
    <string name="messageForInvalidEmailOrPassword">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
